--- a/test/fixtures/cats.yml
+++ b/test/fixtures/cats.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  name: MyString
+  description: MyString
 
 two:
-  name: MyString
+  description: MyString
