Incude notification email in fixtures

--- a/test/fixtures/cats.yml
+++ b/test/fixtures/cats.yml
@@ -3,7 +3,9 @@
 one:
   description: MyString
   image_url: http://example.com/fixture_image.jpg
+  notification_email: test@example.com
 
 two:
   description: MyString
   image_url: http://example.com/fixture_image.jpg
+  notification_email: test@example.com
